feat: vector math, add flyway starter