@@ -44,6 +44,7 @@
                         <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
                         <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
                         <arg>-J--enable-native-access=ALL-UNNAMED</arg>
+                        <arg>--add-modules=jdk.incubator.vector</arg>
                         <arg>--enable-preview</arg>
                         <arg>-proc:full</arg>
                         <arg>-parameters</arg>
